churi bidda boro bidda jodi na pao dhora 😂

--- a/audios/adapp.html
+++ b/audios/adapp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Audios AP #2 - Soubhik Das @ItsEsD</title>
+    <title>Audios AP #2 - Soubhik Das</title>
     <meta charset="utf-8" />
     <link rel="icon" type="image/x-icon" href="../assets/img/favicon.jpg" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
