--- a/b-talk/index.html
+++ b/b-talk/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>B Talk - Soubhik Das @ItsEsD</title>
-    <meta name="title" content="Soubhik Das @itsEsD" />
+    <title>B Talk - Soubhik Das </title>
+    <meta name="title" content="Soubhik Das " />
     <meta name="description" content="Founder & Curator. AMRIT. DSonic Music. Web / Software || Music || IOT || .. etc.
 ..“What is the meaning of life?” may be the stereotypical philosophical question, supposedly abstract and pointless, but it bares its teeth when you phrase it like this: “What is the meaning of my life?”" />
     <meta property="og:image" content="/assets/img/das-meta.png" />
