--- a/divsec/conas.html
+++ b/divsec/conas.html
@@ -21,7 +21,7 @@
 </script>
 <section class="dpro-section" id="dasesd-as">
   <div class="dpro-section-content">
-    <h2 class="mb-5">@itsEsD</h2>
+    <h2 class="mb-5"></h2>
     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
       <div class="flex-grow-1">
         <h3 class="mb-0">Personal Blog</h3>
@@ -31,7 +31,7 @@
           <a
             class="btn btn-outline-success"
             href="https://docs.google.com/spreadsheets/d/1BbCTxqwWZgH3bAVkPmGvFFzBos_IkDpvfnVsrSdBtLI/edit#gid=0"
-            >DasLive Site Data</a
+            >D's World Site Data</a
           >
           <a
             class="btn btn-outline-success"
