--- a/divsec/funda.html
+++ b/divsec/funda.html
@@ -41,26 +41,24 @@
       </div>
     </div>
   </div>
-
 </section>
 <hr class="hr-dpro-sec" />
 <section class="dpro-section" id="dasesd">
     <div class="dpro-section-content">
-      <h2 class="mb-5">@itsEsD</h2>
+      <h2 class="mb-5">D's World</h2>
       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="flex-grow-1">
-          <h3 class="mb-0" style="color:#d6d6d6">Personal Blog</h3>
-          <div class="subheading mb-3">The Static Discharge</div>
+          <div class="subheading mb-3">Passion & Creativity</div>
           <div id="youvidlst" align="right"><iframe class="responsive-iframe" 
             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
             src="https://www.youtube.com/embed/videostories?list=PLAj2xW3NbiHJu7RkYvnWKWrWKqXMvUIbl"></iframe></div>
-          <div class="social-icons">
-            <a class="social-icon" href="https://www.youtube.com/channel/UC3n2kGh43BZc9CSvCgBjuyA"><i class="fab fa-youtube"></i></a>
-            <a class="social-icon" href="https://www.facebook.com/itsEsD"><i class="fab fa-facebook-f"></i></a>
+       <div class="dwrldicn">
+            <a href="b-talk/">B Talk 🧑‍💼</a>
+            <a  href="dquote-e/">DQuote E 📝</a>
+             <a  href="#" onclick="document.getElementById('recordap').style.display='block';document.body.style.overflowY='hidden';">🎙️ Recordings </a>
+       </div>
           </div>
-        </div>
-      </div>
-  
+  </div>
     </div>
   </section>
   <hr class="hr-dpro-sec" />
@@ -72,9 +70,7 @@
         <h2 class="mb-0">DSONIC MUSIC</h2>
         <div class="subheading mb-3">Your Destination 🚀 to Experimental Music 🎼</div>
         <div class="container">
-          
           <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1737095547&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/es-d-448766213" title="DSonic Music" target="_blank" style="color: #cccccc; text-decoration: none;">DSonic Music</a> · <a href="https://soundcloud.com/es-d-448766213/sets/dsonic-music" title="DSonic Music" target="_blank" style="color: #cccccc; text-decoration: none;">DSonic Music</a></div>
-
         </div>
         <div class="social-icons">
           <a class="social-icon" href="https://github.com/das-esd/dsonic"><i class="fab fa-github"></i></a>
