--- a/dquote-e/index.html
+++ b/dquote-e/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>DQuote E - Soubhik Das @ItsEsD</title>
-    <meta name="title" content="Soubhik Das @itsEsD" />
+    <title>DQuote E - Soubhik Das</title>
+    <meta name="title" content="Soubhik Das " />
     <meta
       name="description"
       content="Founder & Curator. AMRIT. DSonic Music. Web / Software || Music || IOT || .. etc.
