--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery - Soubhik Das @ItsEsD</title>
+    <title>Gallery - Soubhik Das</title>
     <meta property="og:image" content="/assets/img/das-meta.png" />
     <meta property="twitter:image" content="/assets/img/das-meta.png" />
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.jpg" />
@@ -696,13 +696,6 @@
                     </li>
                   </ul>
                   <ul class="tm-contact-social">
-                    <li>
-                      <a
-                        class="tm-social-link"
-                        href="https://www.facebook.com/itsEsD"
-                        ><i class="fab fa-facebook"></i
-                      ></a>
-                    </li>
                     <li>
                       <a
                         class="tm-social-link"
