--- a/videos/index.html
+++ b/videos/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Videos - Soubhik Das @ItsEsD</title>
+    <title>Videos - Soubhik Das</title>
     <meta property="og:image" content="/assets/img/das-meta.png" />
     <meta property="twitter:image" content="/assets/img/das-meta.png" />
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.jpg" />
