--- a/prop/pdfviewer.html
+++ b/prop/pdfviewer.html
@@ -1,1 +1,38 @@
-<!DOCTYPE html><html> <head> <title>PDF Viewer | DasLive</title> <meta charset="utf-8"/> <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1"/> <meta name="title" content="PDF Viewer | DasLive"> <meta name="description" content="PDF Viewer | DasLive"> <link rel="icon" href="/assets/img/favicon.jpg" type="image/png" sizes="16x16"> <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> <link rel="stylesheet" href="pdfstyle.css" /> </head> <body> <div id="pdfcontain"> <div id="adobe-dc-view"></div> <div id="objcont"></div> <center> <div id='nocontent'><img id="ntloded" src='/assets/img/pdficon.png' /></div> </center> <div id="formContainer"></div> <button onclick="createForm()" id="crtpdflk">Create PDF Link</button> </div> <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script> <script type="text/javascript" src="pdfscript.js"></script> </body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>PDF Viewer | D's World</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      id="viewport"
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <meta name="title" content="PDF Viewer | D's World" />
+    <meta name="description" content="PDF Viewer | D's World" />
+    <link
+      rel="icon"
+      href="/assets/img/favicon.jpg"
+      type="image/png"
+      sizes="16x16"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="pdfstyle.css" />
+  </head>
+  <body>
+    <div id="pdfcontain">
+      <div id="adobe-dc-view"></div>
+      <div id="objcont"></div>
+      <center>
+        <div id="nocontent">
+          <img id="ntloded" src="/assets/img/pdficon.png" />
+        </div>
+      </center>
+      <div id="formContainer"></div>
+      <button onclick="createForm()" id="crtpdflk">Create PDF Link</button>
+    </div>
+    <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
+    <script type="text/javascript" src="pdfscript.js"></script>
+  </body>
+</html>
