--- a/videos/index.html
+++ b/videos/index.html
@@ -421,7 +421,10 @@
           <footer>
             <div style="float: right">
               <span class="footleft"
-                ><button onclick="window.open('../','_self');">
+                ><button
+                  onclick='var elem = document.getElementById("ftstcon");if(elem.style.display=="none"){elem.style.display="block";}else{elem.style.display="none"}'
+                  style="border-radius: 5px; padding: 7px 10px"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="currentColor"
@@ -446,6 +449,44 @@
                   color: #636161;
                 "
                 >© DAS</a
+              >
+            </div>
+            <div id="ftstcon">
+              <a target="_blank" href="https://amrit-corp.com"
+                >AMRIT-Corp.com</a
+              >
+              <a target="_blank" href="https://mwfbiz.com">🌐 mwfbiz.COM</a
+              ><a target="_blank" href="https://mastrowall.com/"
+                >M A S T R O W A L L</a
+              >&nbsp;
+              <a target="_blank" href="https://github.com/das-esd">GitHub 🧑‍💻</a
+              >&nbsp;
+              <a target="_blank" href="https://soubhikdas.in/b-talk/"
+                >B Talk 🧑‍💼</a
+              >
+              <a target="_blank" href="https://soubhikdas.in/dquote-e/"
+                >DQuote E 🤔</a
+              >
+              <a target="_blank" href="https://soubhikdas.in/gallery/"
+                >Gallery 🌌</a
+              >
+              <a target="_blank" href="https://soubhikdas.in/audios/"
+                >Recordings 🎙️</a
+              >
+              <a
+                target="_blank"
+                href="https://soubhikdas.in/app/audioplayer/?_DSonicMusic=Socio-Leaf::L2F1ZGlvcy9maWxlcy9hdWRpby9kc211c2ljL3RyYWNrcy8yL1NvY2lvIExlYWYubTRh::aHR0cHM6Ly9pLmltZ3VyLmNvbS81b201MlVTLnBuZw==::RXMgRCAoU291YmhpayBEYXMp::"
+                >DSonic Music 🎹</a
+              ><span
+                style="
+                  top: 0px;
+                  right: 15px;
+                  position: absolute;
+                  cursor: pointer;
+                  font-size: 18px;
+                "
+                onclick="document.getElementById('ftstcon').style.display='none';"
+                >&times;</span
               >
             </div>
           </footer>
