--- a/videos/v/index.html
+++ b/videos/v/index.html
@@ -68,7 +68,10 @@
           <footer>
             <div style="float: right">
               <span class="footleft"
-                ><button onclick="window.open('../','_self');">
+                ><button
+                  onclick="window.open('../','_self');"
+                  style="border-radius: 5px; padding: 5px 10px"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="currentColor"
