godlyshit plus carousel

--- a/divsec/funda.html
+++ b/divsec/funda.html
@@ -229,13 +229,13 @@
 $('#clsnewsbx').click(function(){
     $('#quicknews').slideUp('fast');
 });
-$('#prcon').load('../pages/intro.html');
+$('#prcon').load('../pages/intro/');
 $('#clsprmcn').click(function(){
   $('#coninit').slideUp();
   $('#prcon').empty()
 });
 $('#intros').click(function(){
   $('#coninit').slideDown();
-  $('#prcon').load('../pages/intro.html');
+  $('#prcon').load('../pages/intro/');
 });
   </script>
