--- a/divsec/funda.html
+++ b/divsec/funda.html
@@ -70,13 +70,13 @@
         <h2 class="mb-0">DSONIC MUSIC</h2>
         <div class="subheading mb-3">Your Destination 🚀 to Experimental Music 🎼</div>
         <div class="container">
-          <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1737095547&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/es-d-448766213" title="DSonic Music" target="_blank" style="color: #cccccc; text-decoration: none;">DSonic Music</a> · <a href="https://soundcloud.com/es-d-448766213/sets/dsonic-music" title="DSonic Music" target="_blank" style="color: #cccccc; text-decoration: none;">DSonic Music</a></div>
+          <iframe width="100%" height="500" scrolling="no" frameborder="no" allow="autoplay" src="/app/audioplayer/?_SSmuse=true"></iframe> </div>
         </div>
         <div class="social-icons">
           <a class="social-icon" href="https://github.com/das-esd/dsonic"><i class="fab fa-github"></i></a>
           <a class="social-icon" href="https://www.youtube.com/@dsonicmusic"><i class="fab fa-youtube"></i></a>
           <a class="social-icon" href="https://www.facebook.com/DSonicPi"><i class="fab fa-facebook-f"></i></a>
-          <a class="social-icon" href="/app/audioplayer/?_DSonicMusic=Alarm-Rock::L2F1ZGlvcy9maWxlcy9hdWRpby9kc211c2ljL3RyYWNrcy9BbGFybSBSb2NrLm00YQ==::aHR0cHM6Ly9pLmltZ3VyLmNvbS9ERHY0RmdILmpwZWc=::RXMgRCAoU291YmhpayBEYXMp::"><i class="fa fa-music"  aria-hidden="true"></i></a>
+          <a class="social-icon" href="/app/audioplayer/?_SSmuse=true"><i class="fa fa-music"  aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
