--- a/divsec/funda.html
+++ b/divsec/funda.html
@@ -93,7 +93,7 @@
     <div align="left">
     <div style="background-color: white;padding: 10px;margin-bottom:10px;">
       <a class="btn btn-secondary" href="https://www.brainyquote.com/">BrainyQuote</a>
-      <a class="btn btn-secondary" href="https://www.daysoftheyear.com/">Days Of The Year</a>
+      <a class="btn btn-secondary" href="https://www.history.com/this-day-in-history">This Day in History</a>
       <a class="btn btn-secondary" href="https://www.britannica.com/">Britannica</a>
       <a class="btn btn-secondary" href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
       <a class="btn btn-secondary" href="https://www.goodreads.com/quotes">Goodreads</a>
