--- a/gallery/index.html
+++ b/gallery/index.html
@@ -53,9 +53,10 @@
                   <a href="#about" class="nav-link">
                     <div class="triangle-right"></div>
                     <i class="fas fa-paint-brush nav-icon"></i>
-                    Edits
+                    Videos
                   </a>
                 </li>
+
                 <li class="nav-item">
                   <a href="#contact" class="nav-link">
                     <div class="triangle-right"></div>
@@ -614,7 +615,7 @@
               data-image-src="img/img-03.jpg"
             ></div>
             <section id="about" class="tm-section">
-              <h2 class="tm-text-primary">Edits</h2>
+              <h2 class="tm-text-primary">Videos & Edits</h2>
               <hr class="mb-5" />
 
               <div class="row tm-row-about">
@@ -636,34 +637,6 @@
                 <div id="vdframe">
                   <iframe src="../videos/"></iframe>
                 </div>
-                <iframe
-                  src="/dquote-e/"
-                  style="
-                    width: 100%;
-                    border: 0px;
-                    height: 500px;
-                    margin-top: 20px;
-                  "
-                ></iframe>
-
-                <p
-                  style="
-                    color: #4646f7;
-                    margin-top: 20px;
-                    width: 100%;
-                    text-align: center;
-                    background-color: #7998ff96;
-                    padding: 10px;
-                  "
-                >
-                  <a href="/videos/" target="_blank" style="color: #4646f7"
-                    >Videos</a
-                  >
-                  |&nbsp;
-                  <a style="color: #4646f7" href="/dquote-e/" target="_blank"
-                    >DQuote E</a
-                  >
-                </p>
               </div>
             </section>
           </div>
