--- a/videos/index.html
+++ b/videos/index.html
@@ -57,13 +57,14 @@
           </div>
         </div>
 
-        <div id="tm-video-container">
+        <div id="tm-video-container" style="padding: 20px">
           <div
             class="embed-responsive embed-responsive-16by9"
             style="width: 100%"
           >
             <iframe
               class="embed-responsive-item"
+              style="border-radius: 10px"
               src="//www.youtube.com/embed/kAVyR8SzMDU"
               frameborder="0"
               allow="clipboard-write; gyroscope; picture-in-picture"
